add actuator
